--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\href{http://sourabhbajaj.com/}{\Large Magnus Jahnen}} & Email : \href{mailto:magnus@jahnen.me}{magnus@jahnen.me}\\
+  \textbf{\href{https://www.jahnen.me}{\Large Magnus Jahnen}} & Email : \href{mailto:magnus@jahnen.me}{magnus@jahnen.me}\\
   \href{https://jahnen.me/}{https://www.jahnen.me} & Mobile : +49 15170034267 \\
 \end{tabular*}
 
@@ -113,7 +113,7 @@
 
     \resumeSubheading
       {Mercedes Benz Research \& Development North America, Inc.}{Sunnyvale, CA}
-      {Intern, Vehicle Intelligence}{July 2017 - March 2018}
+      {Intern, Vehicle Intelligence}{June 2017 - March 2018}
       \resumeItemListStart
         \resumeItem{Masters thesis}
           {Deep Inverse Reinforcement Learning for trajectory for trajectory planning in fully-autonomous vehicles}
