--- a/resume.tex
+++ b/resume.tex
@@ -80,16 +80,16 @@
 
 %
 %--------PROGRAMMING SKILLS------------
-\section{Programming Skills}
- \resumeSubHeadingListStart
-   \item{
-     \textbf{Languages}{: Python, Java, SQL, C++, C, Kotlin, Swift, Objective-C(++) }
-     \hfill
-     \textbf{Technologies}{: PyTorch, Tensorflow, matplotlib, flask, RoR, Qt, pandas, Jupyter}
-     \hfill
-     \textbf{Tools}{: Docker, Jenkins, Jira, bamboo}
-   }
- \resumeSubHeadingListEnd
+% \section{Programming Skills}
+%  \resumeSubHeadingListStart
+%    \item{
+%      \textbf{Languages}{: Python, Java, SQL, C++, C, Kotlin, Swift, Objective-C(++) }
+%      \hfill
+%      \textbf{Technologies}{: PyTorch, Tensorflow, matplotlib, flask, RoR, Qt, pandas, Jupyter}
+%      \hfill
+%      \textbf{Tools}{: Docker, Jenkins, Jira, bamboo}
+%    }
+%  \resumeSubHeadingListEnd
 
 %-----------EDUCATION-----------------
 \section{Education}
@@ -110,6 +110,14 @@
 %-----------EXPERIENCE-----------------
 \section{Experience}
   \resumeSubHeadingListStart
+
+  \resumeSubheading
+      {Mercedes Benz Research \& Development North America, Inc.}{Sunnyvale, CA}
+      {Deep Learning Engineer}{since December 2018}
+      \resumeItemListStart
+        \resumeItem{Computer Vision and NLP}
+          {Various consulting projects with customers like BMW, Audi, Daimler, IDnow}
+      \resumeItemListEnd
 
     \resumeSubheading
       {Mercedes Benz Research \& Development North America, Inc.}{Sunnyvale, CA}
