--- a/resume.tex
+++ b/resume.tex
@@ -102,7 +102,7 @@
       {Honours Degree Techonology \& Management}{Aug. 2015 -- June 2018}
     \resumeSubheading
       {Technical University of Munich}{Munich, Germany}
-      {Master of Science in Computer Science;  current GPA: 1.3}{2014 -- 2018}
+      {Master of Science in Computer Science;  GPA: 1.2 (top 10\%)}{2014 -- 2018}
       %{Bachelor of Science in Computer Science;  GPA: 2.0}{2011 -- 2014}
   \resumeSubHeadingListEnd
 
